[package]
name = "rusty-lasr-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = [ "derive" ] } 
serde_json = "1.0.108"
bincode = "1.3.3"
derive_builder = "0.12.0"
sha3 = "0.10.8"
hex = "0.4.3"
erased-serde = "0.4.1"
typetag = "0.2.14"
base64 = "0.13"
bip39 = "2.0.0"
uint = "0.9.5"
toml = { version = "0.8.8", features = [ "preserve_order" ] }
rand = { version = "0.8.5", features = [ "std", "std_rng" ] }
schemars = "0.8.16"
uuid = { version = "1.3", features = [ "v4", "serde" ] }
secp256k1 = { version = "0.28.0", features = [ "serde", "recovery", "global-context", "rand", "hashes" ] }
ethereum-types = "0.14.1"
thiserror = "1.0.50"
log = "0.4.20"
